[gd_scene load_steps=5 format=3 uid="uid://dsj577bhb635s"]

[ext_resource type="PackedScene" uid="uid://dw0t4n57ys8d" path="res://scenes/dashboard/project_list/project_item/project_item.tscn" id="1_gbhcd"]
[ext_resource type="Script" uid="uid://b0vq6aqycps6x" path="res://scenes/dashboard/project_list/new_project/new_project.gd" id="1_ivkhn"]
[ext_resource type="Texture2D" uid="uid://bqfagmo47lo4o" path="res://meta/icons/dir.svg" id="3_qa5mk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qa5mk"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 50.0
content_margin_bottom = 6.0
bg_color = Color(0.11764706, 0.12156863, 0.13725491, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="NewProject" type="PanelContainer" node_paths=PackedStringArray("project_preview", "project_name_line_edit", "project_path_line_edit", "module_options_container", "module_option_button", "error_label", "create_button")]
offset_right = 540.0
offset_bottom = 442.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_ivkhn")
project_preview = NodePath("MarginContainer/VBoxContainer/ProjectItem")
project_name_line_edit = NodePath("MarginContainer/VBoxContainer/ProjectNameLineEdit")
project_path_line_edit = NodePath("MarginContainer/VBoxContainer/ProjectPathLineEdit")
module_options_container = NodePath("MarginContainer/VBoxContainer/ModuleOptionsContainer")
module_option_button = NodePath("MarginContainer/VBoxContainer/ModuleOptionsContainer/ModuleOptionButton")
error_label = NodePath("MarginContainer/VBoxContainer/ErrorLabel")
create_button = NodePath("MarginContainer/VBoxContainer/HBoxContainer/CreateButton")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HPreviewLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"nLabelSecondary"
text = "Preview"

[node name="ProjectItem" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_gbhcd")]
layout_mode = 2
size_flags_vertical = 4
is_preview = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="HProjectName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"nLabelSecondary"
text = "Project Name"

[node name="ProjectNameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
placeholder_text = "My Project"
max_length = 36
context_menu_enabled = false

[node name="spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 4

[node name="HProjectPathLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"nLabelSecondary"
text = "Project Path"

[node name="ProjectPathLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_styles/read_only = SubResource("StyleBoxFlat_qa5mk")
placeholder_text = "/home/user/Documents/my-project"
editable = false
context_menu_enabled = false

[node name="ProjectDirButton" type="Button" parent="MarginContainer/VBoxContainer/ProjectPathLineEdit"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -17.0
offset_right = -12.0
offset_bottom = 17.0
grow_horizontal = 0
grow_vertical = 2
theme_type_variation = &"nButtonIconSidebar"
icon = ExtResource("3_qa5mk")
alignment = 0
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 4

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="HModuleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"nLabelSecondary"
text = "Module"

[node name="ModuleOptionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="ModuleOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/ModuleOptionsContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
alignment = 1
selected = 0
item_count = 1
popup/item_0/id = 0

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="ErrorLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"nRichTextThin"
theme_override_colors/default_color = Color(1, 0.3019608, 0.3019608, 1)
bbcode_enabled = true
text = "Error Message"
fit_content = true
horizontal_alignment = 1
meta_underlined = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Cancel"

[node name="CreateButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"nButtonPrimary"
disabled = true
text = "Create"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/ProjectNameLineEdit" to="." method="_on_project_name_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ProjectPathLineEdit/ProjectDirButton" to="." method="_on_project_dir_button_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ModuleOptionsContainer/ModuleOptionButton" to="." method="_on_module_option_button_item_selected"]
[connection signal="meta_clicked" from="MarginContainer/VBoxContainer/ErrorLabel" to="." method="_on_error_label_meta_clicked"]
[connection signal="meta_hover_ended" from="MarginContainer/VBoxContainer/ErrorLabel" to="." method="_on_error_label_meta_hover_ended"]
[connection signal="meta_hover_started" from="MarginContainer/VBoxContainer/ErrorLabel" to="." method="_on_error_label_meta_hover_started"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
